<resources>
    <string name="app_name">XabarchiChat</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="or">Or,</string>
    <string name="username">Username</string>
    <string name="contacts">Contacts</string>
    <string name="calls">Calls</string>
    <string name="chats">Chats</string>
    <string name="settings">Settings</string>
    <string name="edit">Edit</string>

    <string name="all">All</string>
    <string name="personals">Personals</string>
    <string name="search_in_chats">search in chats</string>
    <string name="all_chats">All chats</string>
    <string name="groups">Groups</string>
    <string name="personal">Personal</string>
    <string name="search">search</string>
    <string name="find_people_near">Find people nearby</string>
    <string name="to_invite_person">Invite Friends</string>

    <string name="please_write_username">please write username</string>
    <string name="please_write_email">please write email</string>
    <string name="please_write_password">please write password</string>
    <string name="i_forgot_the_password">I forgot the password</string>
    <string name="sign_in_error_error">An error occurred while logging in to the profile</string>
    <string name="the_password_was_sent_your_email">the password was sent to your email</string>
    <string name="send_error_error">An error occurred while sending</string>
    <string name="password_max_seven_character">The password must be at least 7 characters long</string>
    <string name="all_users">All users</string>
    <string name="user_deleted">User deleted</string>
    <string name="ok_delete">Ok, delete</string>
    <string name="cancel">Cancel</string>
    <string name="do_you_want_to_delete_this_contact">Do you want to delete this contact?</string>
    <string name="contact_deleted">Contact deleted</string>
    <string name="message">Message...</string>
    <string name="if_simple_message_send_CODE">)no-no(</string>
    <string name="saved_messages">Saved messages</string>
    <string name="recent_calls">Recent calls</string>
    <string name="devices">Devices</string>
    <string name="chat_folders">Chat Folders</string>
    <string name="notifications_and_sounds">Notifications and Sounds</string>
    <string name="privacy_and_security">Privacy and Security</string>
    <string name="data_and_storage">Data and Storage</string>
    <string name="appearance">Appearance</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="ask_a_questions">Ask a Questions</string>
    <string name="xabarchi_faq">Xabarchi FAQ</string>


    <string name="image_code">Image</string>
    <string name="awdaw">adawd</string>


    <string-array name="spn_filter_items">
        <item>Sorted by Name</item>
        <item>Sorted by Last Seen Time</item>
    </string-array>

</resources>