<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_light_grey"
    tools:context=".ui.screen.mainFragments.chats.ChatsFragment">

    <View
        android:id="@+id/tool_bar_panel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/main_light_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn_create"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="20dp"
        android:background="?selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_create"
        app:layout_constraintBottom_toBottomOf="@+id/tool_bar_panel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tool_bar_panel" />

    <TextView
        android:id="@+id/btn_edit"
        style="@style/blue_toolbar_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:background="?selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/edit"
        app:layout_constraintBottom_toBottomOf="@+id/tool_bar_panel"
        app:layout_constraintStart_toStartOf="@+id/tool_bar_panel"
        app:layout_constraintTop_toTopOf="@+id/tool_bar_panel" />

    <TextView
        android:id="@+id/txt_toolbar_title"
        style="@style/toolbar_title_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chats"
        app:layout_constraintBottom_toBottomOf="@+id/tool_bar_panel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tool_bar_panel"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_search"
        style="@style/et_search_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/edit_text_back"
        android:clickable="false"
        android:drawableLeft="@drawable/ic_search"
        android:drawablePadding="10dp"
        android:focusable="false"
        android:gravity="left"
        android:hint="@string/search_in_chats"
        android:paddingStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tool_bar_panel" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_light_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_search"
        app:tabIndicatorAnimationDuration="500"
        app:tabIndicatorColor="@color/main_blue"
        app:tabIndicatorHeight="3dp"
        app:tabSelectedTextColor="@color/text_blue"
        app:tabTextColor="@color/text_grey">

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all_chats" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/personal" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/groups" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp_chats"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/main_light_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>